2010-11-11  John W. Eaton  <jwe@octave.org>

	Bug #31165.

	* symtab.h (symbol_table::parent_classes): New static function.
	* symtab.cc (out_of_date_check): Also look for methods defined
	in parent classes of dispatch_type.
	(symbol_table::fcn_info::fcn_info_rep::load_class_method): Call
	parent_classes instead of accessing parent_map directly.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* octave.cc (octave_main): Call octave_ieee_init here.
	* sysdep.cc (sysdep_init): Not here.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* sysdep.cc: Eliminate special case for __DECCXX.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* sysdep.cc (sysdep_init): Eliminate special case for NeXT systems.
	(malloc_handler, NeXT_init): Delete.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* sighandlers.cc (MAYBE_ACK_SIGNAL): Delete macro and all uses.
	(sigchld_handler): Delete special case for __EMX__.
	* sysdep.cc (sysdep_init): Eliminate special case for __EMX__.
	(OS2_init, Fextproc): Delete.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* sysdep.cc (sysdep_init): Eliminate special case for SCO.
	(SCO_init): Delete.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* DLD-FUNCTIONS/__dispatch__.cc: Rename from dispatch.cc.
	Move tests to scripts/deprecated/dispatch.m.
	(F__dispatch__): Rename from Fdispatch.

	* DLD-FUNCTIONS/module-files: Add __dispatch__.cc to the list.
	Remove dispatch.cc from the list.

2010-11-10  John W. Eaton  <jwe@octave.org>

	* oct-parse.yy (Fbuiltin): Move here from DLD-FUNCTIONS/dispatch.cc.

2010-11-10  Kai Habel  <kai.habel@gmx.de>

	* fltk-backend.cc (fltk_uimenu::update_accelerator
	fltk_uimenu::update_callback, fltk_uimenu::update_enable,
	fltk_uimenu::update_foregroundcolor fltk_uimenu::update_visible):
	Check if find_item was succesful.
	(fltk_uimenu::update_seperator): Make sure we don't write beyond
	limits of menubar structure.

2010-11-10  John W. Eaton  <jwe@octave.org>

	Bug #31491.
