@@ -1,3 +1,11 @@
+2010-11-11  Kai Habel  <kai.habel@gmx.de>
+
+	* fltk-backend.cc (plot_window::uimenu_update,
+	fltk_backend::update): Add prefix 'ID_' to property ids to avoid
+	name clash on windows systems.
+	* graphics.cc (gnuplot_backend::update): Dito.
+	* genprops.awk (emit_declarations, emit_source): Dito
+
 2010-11-11  John W. Eaton  <jwe@octave.org>
 
 	Bug #31165.
